progress made on artist page

--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -51,31 +51,40 @@
         <h1 class="artist-name">CRYHARD</h1>
         <p class="artist-location">OKLAHOMA CITY, OK</p>
       </div>
-      <div class="artist-image-container">
-        <img src="../../assets/images/artists/cryhard/cryhard-promo.webp" alt="Artist Photo" class="artist-image">
-      </div>
-      <div class="artist-interactables">
-        <div class="player-container">
+
+
+
+      <div class="artist-media">
+        <!-- If landscape artist photo, use this -->
+        <img src="../../assets/images/artists/cryhard/cryhard-promo.webp" alt="" class="artist-image is-landscape">
+        
+        <!-- If square artist photo, use this -->
+        <!-- <img src="../../assets/images/artists/idiot-mile/idiot-mile-live.webp" alt="" class="artist-image is-square"> -->
+
+        <div class="artist-bar">
           <div class="bandcamp-player">
-            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
+            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
           </div>
-          <div class="player-spacer"></div>
-        </div>
-        <div class="artist-social-icons">
-          <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a>
-          <a href=""><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
-          <a href=""><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
-          <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a>
+
+          <div class="artist-social-icons">
+            <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a>
+            <a href=""><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
+            <a href=""><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
+            <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a>
+          </div>
         </div>
       </div>
+
+
+
+
       <div class="description-section">
         <p>
-          Cryhard is an indie/alternative band based out of Oklahoma City and consists of members 
-          Bailey Little, Patrick Hanscom, and Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. <br><br>
-          Cryhard is a project in which everyone fills different roles depending on the track.
-          This project has been in the works since 2018 and has had assistance from several good friends along the way. <br><br>
-          Of Course I Will is the band’s first full-length LP that reflects on themes of growing up, anxiety, and love. 
-          Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
+          Cryhard officially began in 2018, cycling through several names before finally landing on Cryhard—a name that came to be from typing “Cry” into a random name generator. While the name changed, members came and went, albums were recorded, released, and deleted—it was time to start over for the last time. In 2023, a new lineup began to take shape, leading to the release of their debut LP, <em>Of Course I Will</em>. 
+          <br><br>
+          Today, the band consists of Bailey Little (vocals, guitar, bass), Patrick Hanscom (vocals, guitar), Jenny Mayes (guitar, bass), and Malcolm Bensinger (drums, percussion). This lineup defines their live performances, but when recording and writing, no one is a stranger to swapping instruments or helping shape the overall arrangements.
+          <br><br>
+          Looking forward, the band announces their 2nd full length LP <em>Before You Knew Me</em> coming summer 2026
         </p>
       </div>
     </main>
