finished desktop version

--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -67,10 +67,10 @@
           </div>
 
           <div class="artist-social-icons">
-            <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a>
-            <a href=""><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
-            <a href=""><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
-            <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a>
+            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a> -->
+            <a href="https://www.instagram.com/cryhardtypebeat/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
+            <a href="https://www.youtube.com/@Cryhardtypebeat"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
+            <a href="https://www.tiktok.com/@cryhardtypebeat"><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a>
           </div>
         </div>
       </div>
