--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -84,7 +84,7 @@
           <br><br>
           Today, the band consists of Bailey Little (vocals, guitar, bass), Patrick Hanscom (vocals, guitar), Jenny Mayes (guitar, bass), and Malcolm Bensinger (drums, percussion). This lineup defines their live performances, but when recording and writing, no one is a stranger to swapping instruments or helping shape the overall arrangements.
           <br><br>
-          Looking forward, the band announces their 2nd full length LP <em>Before You Knew Me</em> coming summer 2026
+          Looking forward, the band announces their 2nd full length LP <em>Before You Knew Me</em> coming summer 2026.
         </p>
       </div>
     </main>
