moved artist pages to root

--- a/roster/index.html
+++ b/roster/index.html
@@ -52,7 +52,7 @@
         <h1 class="roster-heading">ROSTER</h1>
         <div class="roster-grid">
     
-          <a href="acid-baptism/" class="artist-link">
+          <a href="../acid-baptism/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/acid-baptism/acid-baptism-portrait.webp" alt="" class="artist-block-image">
@@ -65,7 +65,7 @@
             </div>
           </a>
 
-          <a href="cryhard/" class="artist-link">
+          <a href="../cryhard/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/cryhard/cryhard-band.webp" alt="" class="artist-block-image">
@@ -78,7 +78,7 @@
             </div>
           </a>
 
-          <a href="donovan-funk/" class="artist-link">
+          <a href="../donovan-funk/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/donovan-funk/donovan-funk-portrait-square.webp" alt="" class="artist-block-image">
@@ -91,7 +91,7 @@
             </div>
           </a>
 
-          <a href="feverest/" class="artist-link">
+          <a href="../feverest/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/feverest/feverest-band.webp" alt="" class="artist-block-image">
@@ -104,7 +104,7 @@
             </div>
           </a>
 
-          <a href="foam/" class="artist-link">
+          <a href="../foam/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/foam/foam-band.webp" alt="" class="artist-block-image">
@@ -117,7 +117,7 @@
             </div>
           </a>
 
-          <a href="idiot-mile/" class="artist-link">
+          <a href="../idiot-mile/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/idiot-mile/idiot-mile-live.webp" alt="" class="artist-block-image">
@@ -130,7 +130,7 @@
             </div>
           </a>
 
-          <a href="pageant-dad/" class="artist-link">
+          <a href="../pageant-dad/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/pageant-dad/pageant-dad-portrait.webp" alt="" class="artist-block-image">
@@ -143,7 +143,7 @@
             </div>
           </a>
 
-          <a href="panhandle/" class="artist-link">
+          <a href="../panhandle/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/panhandle/panhandle-portrait.webp" alt="" class="artist-block-image">
@@ -156,7 +156,7 @@
             </div>
           </a>
 
-          <a href="powdr/" class="artist-link">
+          <a href="../powdr/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/powdr/powdr-promo.webp" alt="" class="artist-block-image">
@@ -169,7 +169,7 @@
             </div>
           </a>
 
-          <a href="sliderhand/" class="artist-link">
+          <a href="../sliderhand/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/sliderhand/sliderhand-portrait.webp" alt="" class="artist-block-image">
@@ -182,7 +182,7 @@
             </div>
           </a>
 
-          <a href="sweetest-pot/" class="artist-link">
+          <a href="../sweetest-pot/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/sweetest-pot/sweetest-pot-portrait.webp" alt="" class="artist-block-image">
@@ -195,7 +195,7 @@
             </div>
           </a>
 
-          <a href="toad-socks/" class="artist-link">
+          <a href="../toad-socks/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
                 <img src="../assets/images/artists/toad-socks/toad-socks-band.webp" alt="" class="artist-block-image">
