split up home page by sizes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="assets/shared-styles/header.css">
     <link rel="stylesheet" href="assets/shared-styles/cart-outline.css">
     <link rel="stylesheet" href="assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="home.css">     
+    <link rel="stylesheet" href="home.base.css">
+    <link rel="stylesheet" href="home.md.css"> 
+    <link rel="stylesheet" href="home.sm.css">  
   </head>
 
   <body>      
