donovan funk done

--- a/about/index.html
+++ b/about/index.html
@@ -56,8 +56,8 @@
             Our mission is to provide resources and assistance to artists in our community so that they can fulfill their unique and creative visions.
             <br><br>We provide a variety of services to the Oklahoma music community, including:
             HIFI in-house cassette duplication, graphic design, videography, marketing services, record deals, vinyl orders, and physical media distribution.
-            <br><br>We’re here to boost the amazing talent coming from Oklahoma and strengthen our music community with the services we provide.
-            We can’t wait to make some unexplainably good music with you!
+            <br><br>We're here to boost the amazing talent coming from Oklahoma and strengthen our music community with the services we provide.
+            We can't wait to make some unexplainably good music with you!
           </p>
           <p class="mcr-signature"><br>— The MCR Team</p>
           <a href="mailto:mysteryclassrecords@gmail.com">mysteryclassrecords@gmail.com</a>
