--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p>
           In collaboration with Zaragoza Record House—this is the 3rd EP and cassette of the Hobbyist, Demo.nstration Series.
         <br><br>
-          Limited to only 5, get your hands on one before they’re gone!
+          Limited to only 5, get your hands on one before they're gone!
         </p>
         <button class="pre-order-button" onclick="location.href='store/mcr-012/'">
           BUY NOW
