--- a/store/cryhrd-001/index.html
+++ b/store/cryhrd-001/index.html
@@ -426,7 +426,7 @@
       <p>
         This is the second edition <i>Of Course I Will</i> shirt from Cryhard.
         <br><br>
-        This is the final piece of merch related to this album. We’re putting these on sale to clean house and make room for the next era of Cryhard merch.
+        This is the final piece of merch related to this album. We're putting these on sale to clean house and make room for the next era of Cryhard merch.
         <br><br>
         Grab one of these white Comfort Colors album-related tees while supplies last!
       </p>
