--- a/store/mcr-002v/index.html
+++ b/store/mcr-002v/index.html
@@ -105,11 +105,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard’s freshman album, Of Course I Will, now has its first-ever vinyl run. Featuring a beautiful sleeve, insert, and black vinyl. OCIW set them on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
+        Cryhard's freshman album, Of Course I Will, now has its first-ever vinyl run. Featuring a beautiful sleeve, insert, and black vinyl. OCIW set them on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
         <br><br>
       </p>
       <p>
-        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
+        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey's spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
       </p>
     </section>
 
