--- a/store/mcr-007/index.html
+++ b/store/mcr-007/index.html
@@ -422,7 +422,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The highly anticipated debut release from powdr is here and we couldn’t be more excited.
+        The highly anticipated debut release from powdr is here and we couldn't be more excited.
         <br><br>
         Settle Pain provides an insane experience of indie, psych, kroutrock, and synth rock.
         <br><br>
