--- a/store/mcr-008/index.html
+++ b/store/mcr-008/index.html
@@ -425,7 +425,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The freshman album by Oklahoma’s panhandle is now on cassette for the very first time.
+        The freshman album by Oklahoma's panhandle is now on cassette for the very first time.
         <br><br>
         Limited to 25 first edition HIFI real-time dubbed chocolate swirl cassettes with label stickers and numbered card. Hand dubbed, stamped, and packaged.
         <br><br>
