--- a/store/new-001/index.html
+++ b/store/new-001/index.html
@@ -426,7 +426,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        We often hear that people want to start collecting cassette tapes but don’t have a device to play them on. Now, you can begin your collection and listen without breaking the bank!
+        We often hear that people want to start collecting cassette tapes but don't have a device to play them on. Now, you can begin your collection and listen without breaking the bank!
         <br><br>
       </p>
       <p>
