--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -400,7 +400,7 @@
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li>Sorcerer’s Tome - Cryhard</li>
+              <li>Sorcerer's Tome - Cryhard</li>
               <li>benchmark - Kitchen Slug</li>
               <li>Cursed - Idiot Mile</li>
               <li>Flawed me - Always Last</li>
@@ -427,11 +427,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The first-ever volume of Mystery Class’s very own series, Side Quests, is here.
+        The first-ever volume of Mystery Class's very own series, Side Quests, is here.
         <br><br>
-        This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won’t find them anywhere else!
+        This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won't find them anywhere else!
         <br><br>
-        With songs from Cryhard, Kitchen Slug, Idiot Mile, Always Last, Sweetest Pot, acid baptism, settling..., Toad Socks, and Hobbyist, there’s something for everyone to enjoy. Pick up your very own numbered and limited-edition copy of this first-ever MCR release. Limited to 25 copies.
+        With songs from Cryhard, Kitchen Slug, Idiot Mile, Always Last, Sweetest Pot, acid baptism, settling..., Toad Socks, and Hobbyist, there's something for everyone to enjoy. Pick up your very own numbered and limited-edition copy of this first-ever MCR release. Limited to 25 copies.
       </p>
     </section>
 
