--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -424,11 +424,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard’s freshman album, Of Course I Will, has its first-ever tape run.<br><br>Limited to just 50 copies, this release includes a Hi-Fi audio tape, a beautifully designed fold-out J-Slip, and a clear case. This album set the band on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
+        Cryhard's freshman album, Of Course I Will, has its first-ever tape run.<br><br>Limited to just 50 copies, this release includes a Hi-Fi audio tape, a beautifully designed fold-out J-Slip, and a clear case. This album set the band on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
         <br><br>
       </p>
       <p>
-        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
+        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey's spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
       </p>
     </section>
 
