--- a/store/mcr-012/index.html
+++ b/store/mcr-012/index.html
@@ -424,7 +424,7 @@
       <p>
         In collaboration with Zaragoza Record House—this is the 3rd EP and cassette of the Hobbyist, Demo.nstration Series.
         <br><br>
-        Limited to only 5, get your hands on one before they’re gone!
+        Limited to only 5, get your hands on one before they're gone!
       </p>
     </section>
 
