--- a/roster/index.html
+++ b/roster/index.html
@@ -150,7 +150,7 @@
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
-                  <p class="artist-block-artist-name">Panhandle</p>
+                  <p class="artist-block-artist-name">Panhandle.</p>
                 </div>
               </div>
             </div>
