--- a/toad-socks/index.html
+++ b/toad-socks/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cryhard</title>
+    <title>Toad Socks</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -48,7 +48,7 @@
     <!-- Artist Section -->
     <main class="artist-section">
       <div class="artist-heading">
-        <h1 class="artist-name">Cryhard</h1>
+        <h1 class="artist-name">Toad Socks</h1>
         <p class="artist-location">Oklahoma City, OK</p>
       </div>
 
@@ -56,32 +56,30 @@
 
       <div class="artist-media">
         <!-- If landscape artist photo, use this -->
-        <img src="../../assets/images/artists/cryhard/cryhard-promo.webp" alt="" class="artist-image is-landscape">
+        <img src="../../assets/images/artists/toad-socks/toad-socks-band.webp" alt="" class="artist-image is-landscape">
         
         <!-- If square artist photo, use this -->
         <!-- <img src="../../assets/images/artists/idiot-mile/idiot-mile-live.webp" alt="" class="artist-image is-square"> -->
 
         <div class="artist-bar">
           <div class="bandcamp-player">
-            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
+            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1066713228/size=small/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://toadsocksmusic.bandcamp.com/album/pond">Pond by Toad Socks</a></iframe>
           </div>
 
           <div class="artist-social-icons">
             <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a> -->
-            <a href="https://www.instagram.com/cryhardtypebeat/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
-            <a href="https://www.youtube.com/@Cryhardtypebeat"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
-            <a href="https://www.tiktok.com/@cryhardtypebeat"><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a>
+            <a href="https://www.instagram.com/toadsocks/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
+            <a href="https://www.youtube.com/channel/UCYfu0Xep8MXBfD54TXV1SuQ"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
+            <!-- <a href="https://www.tiktok.com/@cryhardtypebeat"><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a> -->
           </div>
         </div>
       </div>
 
       <div class="description-section">
         <p>
-          <em>Cryhard</em> officially began in 2018, cycling through several names before finally landing on Cryhard—a name that came to be from typing “Cry” into a random name generator. While the name changed, members came and went, albums were recorded, released, and deleted—it was time to start over for the last time. In 2023, a new lineup began to take shape, leading to the release of their debut LP, <em>Of Course I Will</em>. 
+          <em>Toad Socks</em> began as a side project between three roommates who decided to personify themselves as toads.
           <br><br>
-          Today, the band consists of <em>Bailey Little</em> (vocals, guitar, bass), <em>Patrick Hanscom</em> (vocals, guitar), <em>Jenny Mayes</em> (guitar, bass), and <em>Malcolm Bensinger</em> (drums, percussion). This lineup defines their live performances, but when recording and writing, no one is a stranger to swapping instruments or helping shape the overall arrangements.
-          <br><br>
-          Looking forward, the band announces their 2nd full length LP <em>Before You Knew Me</em> coming summer 2026.
+          The project now lives on as a collaboration between <em>Honey Payton</em> of <em>Sweetest Pot</em> and <em>Bailey Little</em> of <em>Cryhard</em>. Originally centered around hip-hop and rap, <em>Toad Socks'</em> sound has since bent toward synth pop, alternative, and experimental territory.
         </p>
       </div>
     </main>
@@ -98,52 +96,16 @@
           <h2 class="store-heading">Merchandise</h2>
           <div class="store-grid">
 
-            <a href="../../store/cryhrd-001/" class="merch-link">
+            <a href="../../store/mcr-004/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OCIW White T-Shirt</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$20</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../../store/mcr-002/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../../store/mcr-003/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">Stretch Us Outta Here - Cassette</p>
+                    <p class="merch-block-artist-name">Toad Socks</p>
+                    <p class="merch-block-product-name">Pond - Cassette</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
